--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.12",
     "@types/react-dom": "^19",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
