--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
     "@cloudinary/url-gen": "^1.22.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
