--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall":"prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.0",
     "@clerk/nextjs": "^6.31.4",
     "@cloudinary/url-gen": "^1.22.0",
-    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-cloudinary": "^6.16.0",
